avoid absolute path

--- a/task2/styles.css
+++ b/task2/styles.css
@@ -19,7 +19,7 @@ body {
     background-image: url(images/por4.jpg);
     background-repeat: no-repeat;
     background-size: auto;
-    background-position: center;
+    background-position: right;
     
     
     
